--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,10 @@
-# Sorting-Techniques
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Sorting Visualization</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -23,15 +23,13 @@
 				<input type="button" onclick="SelectionSort()" value="Selection Sort">
 				<input type="button" onclick="BubbleSort()" value="Bubble Sort">
 				<input type="button" onclick="InsertionSort()" value="Insertion Sort">
-				<input type="button" onclick="MergeSort()" value="Merge Sort">
-				<input type="button" onclick="QuickSort()" value="Quick Sort">
-				<input type="button" onclick="HeapSort()" value="Heap Sort"><br><br>
 			</div>
 			<button onclick="reset()">Generate New Array</button>
 		</div>
 	</div>
 	<div id="container">
 	</div>
+	<script src="/first.js"></script>
 </body>
 
 </html>
